# tracker/backend/docs/swagger.json
@@ -100,45 +100,7 @@
                 }
             }
         },
-        "/users/tasks": {
-            "put": {
-                "description": "Stop task by user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "Stop task by user",
-                "parameters": [
-                    {
-                        "description": "Stop task request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.StopTaskRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.StopTaskResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
+        "/users/tasks/start": {
             "post": {
                 "description": "Start task by user",
                 "consumes": [
@@ -167,6 +129,46 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.StartTaskResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/tasks/stop": {
+            "post": {
+                "description": "Stop task by user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Stop task by user",
+                "parameters": [
+                    {
+                        "description": "Stop task request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.StopTaskRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.StopTaskResponse"
                         }
                     },
                     "400": {
